numOfWinners fixed on firefox

--- a/src/components/competitors/createCompetitor.module.css
+++ b/src/components/competitors/createCompetitor.module.css
@@ -5,7 +5,7 @@
 .inputtextCompetitor{
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .createCompetitorBtn{
