--- a/src/components/competitors/drawHeader.module.css
+++ b/src/components/competitors/drawHeader.module.css
@@ -30,7 +30,7 @@
     padding-left: 0.5em;
     padding-right: 0.5em;
     color: black;
-    font-weight: 500;
+    font-weight: 400;
     text-align: center;
 }
 
